# ComputingForDataScienceHW7New

./: .gitignore  README.md  main.py  pyproject.toml
src/: api_model.py  example_input.json  model.pkl  request_test.py  test_missing_field.py  test_wrong_type.py
